Slightly improved cave system that is less prone to causing the server to hang