@@ -18,73 +18,33 @@ public final class MoonCaveRegistry {
         register(new MoonCaveDefinition(
                 Constant.id("olivine_branching_cave"),
                 MoonCaveStyle.OLIVINE,
-                new BranchingCaveShape(
-                        8,
-                        16,
-                        5.5D,
-                        11.0D,
-                        3.5D,
-                        7.0D,
-                        1.8D,
-                        3.2D,
-                        12,
-                        28
-                ),
+                new BranchingCaveShape(12, 26, 5.5D, 11.0D, 3.5D, 7.0D, 1.8D, 3.2D, 12, 28),
                 100,
-                1.0F
+                0.35F
         ));
 
         register(new MoonCaveDefinition(
                 Constant.id("glacial_layered_cavern"),
                 MoonCaveStyle.GLACIAL,
-                new LayeredDiscCaveShape(
-                        3,
-                        6,
-                        22.0D,
-                        48.0D,
-                        3.0D,
-                        7.0D,
-                        8,
-                        18
-                ),
+                new LayeredDiscCaveShape(3, 6, 24.0D, 56.0D, 3.0D, 7.0D, 8, 18),
                 100,
-                1.0F
+                0.25F
         ));
 
         register(new MoonCaveDefinition(
                 Constant.id("cheese_lava_tube_cave"),
                 MoonCaveStyle.CHEESE,
-                new LavaTubeCaveShape(
-                        5,
-                        10,
-                        22,
-                        44,
-                        2.0D,
-                        4.2D,
-                        4.0D,
-                        9.0D
-                ),
+                new LavaTubeCaveShape(4, 8, 24, 40, 2.0D, 4.2D, 4.0D, 18.0D),
                 100,
-                1.0F
+                0.30F
         ));
 
         register(new MoonCaveDefinition(
                 Constant.id("cheese_branching_cave"),
                 MoonCaveStyle.CHEESE,
-                new BranchingCaveShape(
-                        10,
-                        20,
-                        4.0D,
-                        8.0D,
-                        3.0D,
-                        5.5D,
-                        2.0D,
-                        4.0D,
-                        9,
-                        22
-                ),
+                new BranchingCaveShape(10, 22, 4.0D, 8.0D, 3.0D, 5.5D, 2.0D, 4.0D, 9, 22),
                 60,
-                1.0F
+                0.22F
         ));
     }
 
@@ -102,6 +62,22 @@ public final class MoonCaveRegistry {
             return null;
         }
 
+        List<MoonCaveDefinition> passedChance = new ArrayList<>();
+
+        for (MoonCaveDefinition definition : definitions) {
+            if (random.nextFloat() <= definition.spawnChance()) {
+                passedChance.add(definition);
+            }
+        }
+
+        if (passedChance.isEmpty()) {
+            return null;
+        }
+
+        return weightedPick(passedChance, random);
+    }
+
+    private static MoonCaveDefinition weightedPick(List<MoonCaveDefinition> definitions, RandomSource random) {
         int totalWeight = 0;
 
         for (MoonCaveDefinition definition : definitions) {
@@ -109,7 +85,7 @@ public final class MoonCaveRegistry {
         }
 
         if (totalWeight <= 0) {
-            return definitions.getFirst();
+            return definitions.get(0);
         }
 
         int roll = random.nextInt(totalWeight);
@@ -122,6 +98,6 @@ public final class MoonCaveRegistry {
             }
         }
 
-        return definitions.getLast();
+        return definitions.get(definitions.size() - 1);
     }
 }
